@@ -1,5 +1,7 @@
 2014-02-22  6.8.8-8 Dirk Lemstra <dirk@snakeware...>
   * The PSD reader creates a merged image if the image does not contain one.
+  * Added option pdf:fit-page to scale a pdf to the specified size (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=25044).
 
 2014-02-21  6.8.8-8 Cristy  <quetzlzacatenango@image...>
   * Convert linear RGB to sRGB before writing the Targa image format.
